data/derived/comb/progs/unify/prog0246.ml.out
Characters 210-228:
  | h::t -> [bigAdd h (adder t)]
             ^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
